@@ -1,7 +1,8 @@
 - NEW: Ignoring of multiple selected items by their extension. See
        issue #423 for details. (Stefan)
-- NEW: The log dialog allows filtering by bug-ID. 
+- NEW: The log dialog allows filtering by bug-ID.
        See issue #422 for details. (Stefan)
+- NEW: Column to show the remote revision in the CfM dialog. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
